--- a/components/molecule/autosuggest/demo/index.scss
+++ b/components/molecule/autosuggest/demo/index.scss
@@ -1,4 +1,5 @@
 @import '~@s-ui/theme/lib/index';
+@import '~@s-ui/react-atom-icon/lib/index';
 @import '~@s-ui/react-molecule-dropdown-option/lib/index';
 @import '~@s-ui/react-molecule-select/lib/index';
 @import '~@s-ui/react-atom-button/lib/index';
