feat(components/molecule/selectPopover): Change cursor to pointer #2294

--- a/components/molecule/selectPopover/src/styles/settings.scss
+++ b/components/molecule/selectPopover/src/styles/settings.scss
@@ -16,7 +16,7 @@ $bdc-select-popover-selected: $c-primary !default;
 $c-select-popover-selected: $c-primary !default;
 
 $bxz-select-popover-select: border-box !default;
-$cur-select-popover-select: auto !default;
+$cur-select-popover-select: pointer !default;
 
 $op-select-popover: 0.4 !default;
 
