--- a/components/molecule/imageEditor/src/styles/settings.scss
+++ b/components/molecule/imageEditor/src/styles/settings.scss
@@ -1,5 +1,5 @@
 $h-molecule-image-editor: 300px !default;
 $w-molecule-image-editor-label-text: 50px !default;
-$gap-molecule-image-editor-rowLayout: 25px !default;
+$g-molecule-image-editor-rowLayout: $g-xl !default;
 $w-molecule-image-editor-crop-rowLayout: 60% !default;
 $w-molecule-image-editor-sliders-rowLayout: 40% !default;
