feat(components/molecule/imageEditor): Parametrize the margin top of molecule/imageEditor slider ele

--- a/components/molecule/imageEditor/src/styles/index.scss
+++ b/components/molecule/imageEditor/src/styles/index.scss
@@ -10,7 +10,7 @@ $base-class: '.sui-MoleculeImageEditor';
   &-slider {
     align-items: center;
     display: flex;
-    margin-top: $m-xl;
+    margin-top: $mt-molecule-image-editor-slider;
 
     .sui-AtomSlider {
       flex: 1;
