--- a/components/molecule/imageEditor/src/styles/settings.scss
+++ b/components/molecule/imageEditor/src/styles/settings.scss
@@ -1,2 +1,3 @@
 $h-molecule-image-editor: 300px !default;
+$mt-molecule-image-editor-slider: $m-xl !default;
 $w-molecule-image-editor-label-text: 50px !default;
