feat(components/molecule/imageEditor): Parametrize the margin bottom from the image editor crop elem

--- a/components/molecule/imageEditor/src/styles/index.scss
+++ b/components/molecule/imageEditor/src/styles/index.scss
@@ -4,7 +4,7 @@ $base-class: '.sui-MoleculeImageEditor';
   &-crop {
     position: relative;
     height: $h-molecule-image-editor;
-    margin-bottom: $m-xxl;
+    margin-bottom: $mb-molecule-image-editor-crop;
   }
 
   &-slider {
