feat(components/molecule/imageEditor): Add a SCSS token to customize imageEditor labels color

--- a/components/molecule/imageEditor/src/styles/index.scss
+++ b/components/molecule/imageEditor/src/styles/index.scss
@@ -19,7 +19,7 @@ $base-class: '.sui-MoleculeImageEditor';
 
   &-label {
     align-items: center;
-    color: $c-gray;
+    color: $c-molecule-image-editor-label;
     display: flex;
     margin-right: $m-l;
 
