--- a/components/molecule/imageEditor/src/styles/settings.scss
+++ b/components/molecule/imageEditor/src/styles/settings.scss
@@ -1,3 +1,4 @@
+$c-molecule-image-editor-label: $c-gray !default;
 $h-molecule-image-editor: 300px !default;
 $mb-molecule-image-editor-crop: $m-xxl !default;
 $mt-molecule-image-editor-slider: $m-xl !default;
