feat(components/atom/validationText): add margin top variable

--- a/components/atom/validationText/src/styles/index.scss
+++ b/components/atom/validationText/src/styles/index.scss
@@ -3,7 +3,8 @@ $base-class: '.sui-AtomValidationText';
 #{$base-class} {
   display: block;
   font-size: $fz-atom-validation-text;
-  margin: $m-s 0 0;
+  margin: $mt-atom-validation-text 0 0;
+
   @each $type, $color in $validation {
     &--#{$type} {
       color: $color;
