--- a/components/atom/validationText/src/styles/settings.scss
+++ b/components/atom/validationText/src/styles/settings.scss
@@ -1,2 +1,3 @@
 $fz-atom-validation-text: $fz-xs !default;
+$mt-atom-validation-text: $m-s !default;
 $validation: success $c-success, error $c-error, alert $c-alert;
