--- a/components/atom/input/src/Input/Wrappers/Addons/index.scss
+++ b/components/atom/input/src/Input/Wrappers/Addons/index.scss
@@ -1,34 +1,27 @@
-#{$base-class}--withAddon {
-  align-items: center;
-  background-color: $bgc-atom-input-addon;
-  border-color: $bdc-atom-input-addon;
-  border-style: solid;
-  color: $c-atom-input-addon;
-  display: flex;
-  flex-direction: column;
-  height: inherit;
-  justify-content: center;
-  line-height: inherit;
-  padding-left: $p-atom-input-addon-left;
-  padding-right: $p-atom-input-addon-right;
+$base-class-addon: "#{$base-class}--withAddon";
 
-  &--right {
-    border-width: $bdw-atom-input-addon-right;
-  }
-
-  &--left {
-    border-width: $bdw-atom-input-addon-left;
-  }
-
-  &Wrapper {
+#{$base-class} {
+  #{$base-class-addon} {
+    align-items: center;
+    background-color: $bgc-atom-input-addon;
+    border-color: $bdc-atom-input-addon;
+    border-style: solid;
+    color: $c-atom-input-addon;
     display: flex;
-    @include atom-input-shape-wrapper(
-      $base-class,
-      #{'.sui-AtomInput--withAddonWrapper'},
-      $bdrs-atom-input-shapes,
-      $sizes-atom-input,
-      $bdrs-atom-input,
-      $h-atom-input--m
-    );
+    flex-direction: column;
+    height: inherit;
+    justify-content: center;
+    line-height: inherit;
+    padding-left: $p-atom-input-addon-left;
+    padding-right: $p-atom-input-addon-right;
+    width: auto;
+
+    &#{$base-class-addon}--right {
+      border-left-width: $bdw-s;
+    }
+
+    &#{$base-class-addon}--left {
+      border-right-width: $bdw-s;
+    }
   }
 }
