--- a/components/atom/input/src/Password/styles/index.scss
+++ b/components/atom/input/src/Password/styles/index.scss
@@ -1,4 +1,4 @@
-$base-class-password: '#{$base-class-input}-password';
+$base-class-password: '#{$base-class}-password';
 
 #{$base-class-password} {
   position: relative;
