feat(components/atom/helpText): update margin variable

--- a/components/atom/helpText/src/styles/index.scss
+++ b/components/atom/helpText/src/styles/index.scss
@@ -4,5 +4,5 @@ $base-class: '.sui-AtomHelpText';
   color: $c-help-text;
   display: block;
   font-size: $fz-atom-help-text;
-  margin: $mt-atom-help-text 0 0;
+  margin: $m-atom-help-text;
 }
