--- a/components/atom/helpText/src/styles/settings.scss
+++ b/components/atom/helpText/src/styles/settings.scss
@@ -1,3 +1,3 @@
 $c-help-text: $c-gray-light-3 !default;
 $fz-atom-help-text: $fz-xs !default;
-$mt-atom-help-text: $m-s !default;
+$m-atom-help-text: $m-s 0 0 !default;
