--- a/components/atom/validationText/src/styles/settings.scss
+++ b/components/atom/validationText/src/styles/settings.scss
@@ -1,3 +1,3 @@
 $fz-atom-validation-text: $fz-xs !default;
-$mt-atom-validation-text: $m-s !default;
+$m-atom-validation-text: $m-s 0 0 !default;
 $validation: success $c-success, error $c-error, alert $c-alert;
