--- a/components/atom/validationText/src/styles/index.scss
+++ b/components/atom/validationText/src/styles/index.scss
@@ -3,7 +3,7 @@ $base-class: '.sui-AtomValidationText';
 #{$base-class} {
   display: block;
   font-size: $fz-atom-validation-text;
-  margin: $m-atom-validation-text 0 0;
+  margin: $m-atom-validation-text;
 
   @each $type, $color in $validation {
     &--#{$type} {
