chore(Root): wip

--- a/components/atom/input/src/Input/Wrappers/Addons/index.scss
+++ b/components/atom/input/src/Input/Wrappers/Addons/index.scss
@@ -1,4 +1,4 @@
-$base-class-addon: "#{$base-class}--withAddon";
+$base-class-addon: '#{$base-class}--withAddon';
 
 #{$base-class} {
   #{$base-class-addon} {
@@ -9,7 +9,6 @@ $base-class-addon: "#{$base-class}--withAddon";
     color: $c-atom-input-addon;
     display: flex;
     flex-direction: column;
-    height: inherit;
     justify-content: center;
     line-height: inherit;
     padding-left: $p-atom-input-addon-left;
@@ -22,6 +21,21 @@ $base-class-addon: "#{$base-class}--withAddon";
 
     &#{$base-class-addon}--left {
       border-right-width: $bdw-s;
+    }
+  }
+  @each $state, $color in $states-atom-input {
+    &#{$base-class}--status-#{$state} {
+      #{$base-class}-item {
+        &#{$base-class-addon} {
+          border-color: $bdc-atom-input-addon;
+          &#{$base-class-addon}--right {
+            border-left-color: $color;
+          }
+          &#{$base-class-addon}--left {
+            border-right-color: $color;
+          }
+        }
+      }
     }
   }
 }
