--- a/components/atom/input/src/Password/styles/index.scss
+++ b/components/atom/input/src/Password/styles/index.scss
@@ -7,10 +7,8 @@ $base-class-password: '#{$base-class}-password';
   &--toggleButton {
     color: $c-atom-input-password-toggle-button;
     cursor: pointer;
-    position: absolute;
-    right: $r-atom-input-password-toggle-button;
-    top: 50%;
-    transform: translateY(-50%);
     user-select: none;
+    display: flex;
+    align-items: center;
   }
 }
