feat(components/molecule/avatar): handle background color for avatar name fallback

--- a/components/molecule/avatar/src/AvatarFallbackName/index.scss
+++ b/components/molecule/avatar/src/AvatarFallbackName/index.scss
@@ -1,5 +1,11 @@
-$base-class-fallback-name: '#{$base-class}FallbackName';
+$base-class-fallback-name: #{$base-class}FallbackName;
 
 #{$base-class-fallback-name} {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: $c-avatar-fallback-name;
+  text-transform: uppercase;
 }
