--- a/components/molecule/select/src/styles/index.scss
+++ b/components/molecule/select/src/styles/index.scss
@@ -13,7 +13,7 @@ $class-select-atom-input-tags: '#{$class-select-atom-input}--withTags';
     z-index: $z-select-list;
   }
 
-  &-inputSelect {
+  #{$class-input} {
     &-container {
       align-items: center;
       border: $bd-select;
@@ -23,19 +23,13 @@ $class-select-atom-input-tags: '#{$class-select-atom-input}--withTags';
 
       #{$class-select-atom-input-input} {
         caret-color: transparent;
-        background: $bgc-atom-input;
-        color: $c-atom-input;
       }
 
-      .is-disabled & {
+      #{$class-select-atom-input}--is-disabled {
         cursor: default;
 
         #{$class-select-atom-input-input} {
           -webkit-text-fill-color: $c-molecule-select-disabled;
-
-          background: $bg-molecule-select-disabled;
-          border: $bd-molecule-select-disabled;
-          color: $c-molecule-select-disabled;
         }
 
         #{$class-input}-arrow {
@@ -49,18 +43,9 @@ $class-select-atom-input-tags: '#{$class-select-atom-input}--withTags';
         opacity: 1;
         -webkit-appearance: none;
       }
-
-      #{$class-select-atom-input-input}:first-child,
-      #{$class-select-atom-input-tags} {
-        padding-right: $pr-select-atom-input-tags;
-      }
     }
 
     &-arrow {
-      height: $h-select-list-arrow;
-      margin-left: $mr-select-list-arrow;
-      width: $w-select-list-arrow;
-
       &--down {
         transform: rotate(0deg);
       }
