feat(components/atom/label): add opacity token

--- a/components/atom/label/src/styles/index.scss
+++ b/components/atom/label/src/styles/index.scss
@@ -40,7 +40,7 @@ $base-class: '.sui-AtomLabel';
 
   &--disabled {
     cursor: default;
-    opacity: 0.3;
+    opacity: $o-atom-label-disabled;
     pointer-events: none;
   }
 
