--- a/components/atom/label/src/styles/settings.scss
+++ b/components/atom/label/src/styles/settings.scss
@@ -2,6 +2,7 @@ $c-atom-label: inherit !default;
 $c-atom-label-optional: $c-gray-light !default;
 $c-atom-label-contrast: $c-white !default;
 $c-atom-label-disabled: inherit !default;
+$o-atom-label-disabled: 0.3 !default;
 $fw-atom-label: inherit !default;
 $c-atom-label-type: success $c-success, error $c-error, alert $c-alert,
   contrast $c-atom-label-contrast, disabled $c-atom-label-disabled !default;
