--- a/components/atom/slider/src/styles/index.scss
+++ b/components/atom/slider/src/styles/index.scss
@@ -147,6 +147,8 @@ $class-tooltip-hidden: '#{$class-tooltip}-hidden';
 }
 
 #{$class-tooltip} {
+  z-index: $z-atom-slider-tooltip;
+
   #{$class-tooltip-inner} {
     background: transparent;
     border-color: transparent;
