--- a/components/atom/slider/src/styles/settings.scss
+++ b/components/atom/slider/src/styles/settings.scss
@@ -22,3 +22,5 @@ $h-atom-slider-track: 8px !default;
 $p-atom-slider: $p-l !default;
 
 $mt-atom-slider-mark: 10px !default;
+
+$z-atom-slider-tooltip: auto !default;
