feat(components/atom/slider): Remove -system

--- a/components/atom/slider/src/styles/settings.scss
+++ b/components/atom/slider/src/styles/settings.scss
@@ -13,7 +13,7 @@ $ml-atom-slider-handle: 0 !default;
 $ml-atom-slider-label: 0 !default;
 $mb-atom-slider-label: $m-m !default;
 $trf-atom-slider-label: translateX(-50%) !default;
-$c-atom-slider-label: $c-system !default;
+$c-atom-slider-label: $c-black !default;
 $w-atom-slider-handle: 24px !default;
 $b-atom-slider-handle: $bdw-s solid $c-primary !default;
 $bxsh-atom-slider-handle: none !default;
