feat(components/atom/tag): Remove -system

--- a/components/atom/tag/src/_settings.scss
+++ b/components/atom/tag/src/_settings.scss
@@ -37,7 +37,7 @@ $w-atom-tag-clickable: 32px !default;
 
 // closable
 $bgc-atom-tag-closable-icon: transparent !default;
-$c-atom-tag-closable-icon: $c-system !default;
+$c-atom-tag-closable-icon: $c-black !default;
 $bgc-atom-tag-closable-icon--hover: $c-gray !default;
 $c-atom-tag-closable-icon--hover: $c-gray-light-3 !default;
 
