feat(components/molecule/rating): Remove -system

--- a/components/molecule/rating/src/styles/settings.scss
+++ b/components/molecule/rating/src/styles/settings.scss
@@ -21,5 +21,5 @@ $m-l-molecule-small-rating-stars: $m-l-molecule-rating-stars !default;
 $p-molecule-rating-label: $p-m !default;
 $p-molecule-rating-stars: 0 !default;
 
-$c-molecule-rating-svg: $c-system !default;
+$c-molecule-rating-svg: $c-black !default;
 $c-molecule-rating-svg-hover: $c-primary !default;
