--- a/components/molecule/field/src/styles/index.scss
+++ b/components/molecule/field/src/styles/index.scss
@@ -37,7 +37,7 @@ $atomHelpText-class: '.sui-AtomHelpText';
   &-inputContainer {
     width: 100%;
     &--aligned {
-      padding-left: $p-xl;
+      padding-left: $p-xxl;
     }
   }
 
