feat(components/atom/pinInput): create new token to be able to overwrite the placeholder color

--- a/components/atom/pinInput/src/PinInputField.scss
+++ b/components/atom/pinInput/src/PinInputField.scss
@@ -10,6 +10,10 @@
   padding: 0;
   text-align: center;
 
+  &::placeholder {
+    color: $c-pin-input-placeholder;
+  }
+
   &:focus {
     border: $bdw-s solid $c-primary-dark;
     cursor: text;
