--- a/components/atom/pinInput/src/config.scss
+++ b/components/atom/pinInput/src/config.scss
@@ -4,6 +4,7 @@ $bdw-pin-input-field: $bdw-s !default;
 $fw-pin-input-field: $fw-regular !default;
 $lh-pin-input-field: $lh-m !default;
 $m-pin-input-children: $m-m !default;
+$c-pin-input-placeholder: inherit !default;
 
 $s-pin-input-field: (
   // 64px
