--- a/components/molecule/selectPopover/src/styles/index.scss
+++ b/components/molecule/selectPopover/src/styles/index.scss
@@ -67,7 +67,7 @@ $base-class: '.sui-MoleculeSelectPopover ';
     border: $bd-select-popover-content;
     border-radius: $bdrs-select-popover-content;
     box-shadow: $bxsh-select-popover;
-    margin-top: $m-m;
+    margin-top: $m-select-popover-popover;
     position: absolute;
     min-width: $w-select-popover;
     z-index: $z-select-popover-select-popover;
@@ -99,6 +99,36 @@ $base-class: '.sui-MoleculeSelectPopover ';
   &--hasCustomWrapper {
     #{$self}-selectIcon {
       transform: rotate(-90deg) !important;
+    }
+  }
+
+  &-overlay {
+    @each $name, $type in $molecule-select-popover-overlay-types {
+      &--#{'' + $name} {
+        $bgc: map-get($type, bgc);
+
+        &::after {
+          background-color: $bgc;
+          content: '';
+          height: 100%;
+          left: 0;
+          margin-top: $m-select-popover-popover;
+          opacity: 0;
+          pointer-events: none;
+          position: fixed;
+          transition: opacity 0.25s ease-in;
+          width: 100%;
+          z-index: $z-select-popover-select-popover - 1;
+        }
+
+        &.is-open {
+          $op: map-get($type, op);
+
+          &::after {
+            opacity: $op;
+          }
+        }
+      }
     }
   }
 }
