--- a/components/molecule/selectPopover/src/styles/index.scss
+++ b/components/molecule/selectPopover/src/styles/index.scss
@@ -104,23 +104,17 @@ $base-class: '.sui-MoleculeSelectPopover ';
 
   &-overlay {
     @each $name, $type in $molecule-select-popover-overlay-types {
-      &--#{'' + $name} {
+      &--#{$name} {
         $bgc: map-get($type, bgc);
+        animation: op-overlay-animation 1s both;
         background-color: $bgc;
         content: '';
         height: 100%;
         left: 0;
-        opacity: 0;
         pointer-events: none;
         position: absolute;
         top: 0;
-        transition: opacity 0.25s ease-in;
         width: 100%;
-
-        &.is-open {
-          $op: map-get($type, op);
-          opacity: $op;
-        }
       }
     }
   }
