feat(components/molecule/selectPopover): disable pointer events only when overlay is open

--- a/components/molecule/selectPopover/src/styles/index.scss
+++ b/components/molecule/selectPopover/src/styles/index.scss
@@ -119,6 +119,7 @@ $base-class: '.sui-MoleculeSelectPopover ';
         &.is-open {
           $op: map-get($type, op);
           opacity: $op;
+          pointer-events: none;
         }
       }
     }
