fix(components/atom/popover): arrow border color inherit from custom type

--- a/components/atom/popover/src/styles/index.scss
+++ b/components/atom/popover/src/styles/index.scss
@@ -83,7 +83,8 @@ $class-arrow: '#{$base-class}-arrow';
     }
 
     @each $type-key, $type-value in $popover-type {
-      &--type-#{$type-key}::after {
+      &--type-#{$type-key}::after,
+      &--type-#{$type-key}::before {
         border-bottom-color: map-get($type-value, bgc);
       }
     }
